--- a/2ndpraject3/client/public/index.html
+++ b/2ndpraject3/client/public/index.html
@@ -33,6 +33,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- Paypal -->
     <script src="https://www.paypal.com/sdk/js?client-id=sb"></script>
+    <!--JQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
